styles.css
body{
    padding: 0;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

h3{
    margin: 0;
}

img{
    position: relative;
}

button{
    background-color: white;
    border: 1px solid black;
    border-radius: 5px;
    cursor: pointer;
}

p{
    margin: 0;
}

select{
    font-size: small;
    padding: 5px;
    border-radius: 5px;
    background-color: white;
    border: 1px solid #9f9f9f;
}

input[type="text"]{
    width: 220px;
    background-color: #e7e7e7;
    border: 1px solid #9f9f9f;
    border-radius: 5px;
}

.employee{
    display: flex;
    height: 60px;
}

.employee-card{
    background-color: white;
    border: 1px solid black;
    display: flex;
    flex-direction: column;
    width: 17%;
    min-width: 17%;
    padding: 5px;
}

.employee > p {
    margin: 5px;
}

.bookings{
    display: flex;
    width: 85%;
    background-color: rgb(172, 171, 171);
    border-right: solid 1px rgb(53, 53, 53);
}

.booking-section{
    flex: 1;
    border-bottom: 2px solid black;
    font-size: small;
}

.booked{
    background-color: red;
}

.preliminary-booked{
    background-color: yellow;
}

.bar{
    background-color: red;
    border: 1px solid black;
    border-radius: 5px;
    padding: 10px;
}

.professions {
    display: flex;
    flex-direction: row;
    gap: 10px;
}

.weeks-switch{
    display: flex;
    gap: 10px;
}

.header-flex{
    display: flex;
    height: 30px;
    margin-top: 10px;
    margin-bottom: 10px;
    gap: 10px;
}

.header-flex button{
    float: right;
}

.icon {
    position: absolute;
    left: 50px;
    top: 50%;
    transform: translateY(-50%);
    pointer-events: none;
    font-size: 18px;
}

.add-project-btn{
    font-size: small;
    padding: 5px;
    border-radius: 5px;
    background-color: white;
    border: 1px solid #9f9f9f;
}

#jobs{
    margin-left: auto;
}

.color-code-display{
    display: flex;
    gap: 20px;
    margin-bottom: 10px;
}

.calendar-header {
    display: flex;
}

.employee-div{
    width:17.8%;
}

.employee-div p{
    margin-top: 50px;
}

.all-weeks{
    display: flex;
    width: 81.8%;
}

.week {
    display: flex;
    flex-direction: column;
    min-width: 25%;
}

.week-title {
    text-align: center;
    font-weight: bold;
    margin-bottom: 5px;
}

.week-days {
    display: flex;
    width: 100%;
}

.day-box {
    height: 50px;
    width: 14%;
    border: 1px solid #999;
    text-align: center;
    background-color: white;
}

